修复 / 命令的显示问题